--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "mkdirp": "^3.0.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.9",
